tests/baselines/reference/separateCompilationNoExternalModule.errors.txt
tests/cases/compiler/separateCompilationNoExternalModule.ts(2,1): error TS1208: Cannot compile non-external modules when the '--separateCompilation' flag is provided.


==== tests/cases/compiler/separateCompilationNoExternalModule.ts (1 errors) ====
    
    var x;
    ~~~
!!! error TS1208: Cannot compile non-external modules when the '--separateCompilation' flag is provided.